# PAROL6-python-API

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  PAROL6_ROBOT.py  README.md  headless_commander.py  pyproject.toml  requirements-test.txt  robot_api.py  smooth_motion.py  test_script.py  test_smooth_motion.py
.github/workflows/: release.yml  tests.yml
commands/: __init__.py  basic_commands.py  cartesian_commands.py  gripper_commands.py  ik_helpers.py  joint_commands.py  smooth_commands.py
examples/: async_client_quickstart.py  demo_showcase.py  draw_circle.py  manage_server_demo.py  pick_and_place.py  precision.py  speed_comparison.py  sync_client_quickstart.py  zigzag_scan.py
gcode/: commands.py  coordinates.py  interpreter.py  state.py  utils.py
parol6/: PAROL6_ROBOT.py  __init__.py  _version.py  ack_policy.py  config.py  robot.py  smooth_motion.py  tools.py
parol6/cli/: server.py
parol6/client/: __init__.py  ack_policy.py  async_client.py  dry_run_client.py  manager.py  status_subscriber.py  sync_client.py
parol6/commands/: __init__.py  _collision_guard.py  base.py  basic_commands.py  cartesian_commands.py  curved_commands.py  gcode_commands.py  gripper_commands.py  ik_helpers.py  joint_commands.py  query_commands.py  servo_commands.py  shape_commands.py  smooth_commands.py  system_commands.py  tool_action_command.py  utility_commands.py
parol6/gcode/: __init__.py  commands.py  coordinates.py  interpreter.py  parser.py  state.py  utils.py
parol6/motion/: __init__.py  geometry.py  streaming_executors.py  trajectory.py
parol6/protocol/: __init__.py  types.py  wire.py
parol6/server/: __init__.py  async_logging.py  cli.py  command_executor.py  command_registry.py  controller.py  headless_commander.py  ik_layout.py  ik_worker.py  loop_timer.py  manager.py  motion_planner.py  parser.py  segment_player.py  simulation.py  state.py  status_broadcast.py  status_cache.py  transport_manager.py
parol6/server/transports/: __init__.py  mock_serial_transport.py  serial_transport.py  transport_factory.py  udp_transport.py
parol6/smooth_motion/: __init__.py  advanced.py  base.py  circle.py  helix.py  motion_blender.py  motion_constraints.py  quintic.py  scurve.py  spline.py  waypoints.py
parol6/urdf_model/meshes/: L1_simplified.stl  L2_simplified.stl  L3_simplified.stl  L4_simplified.stl  L5_simplified.stl  L6.STL  L6_simplified.stl  base_link_simplified.stl  msg_ai_100_body.stl  msg_ai_100_body_simplified.stl  msg_ai_100_left_jaw.stl  msg_ai_100_left_jaw_simplified.stl  msg_ai_100_right_jaw.stl  msg_ai_100_right_jaw_simplified.stl  msg_ai_150_body.stl  msg_ai_150_body_simplified.stl  msg_ai_150_left_jaw.stl  msg_ai_150_left_jaw_simplified.stl  msg_ai_150_right_jaw.stl  msg_ai_150_right_jaw_simplified.stl  msg_ai_200_body.stl  msg_ai_200_body_simplified.stl  msg_ai_200_left_jaw.stl  msg_ai_200_left_jaw_simplified.stl  msg_ai_200_right_jaw.stl  msg_ai_200_right_jaw_simplified.stl  pneumatic_gripper_assembly_simplified.stl  pneumatic_gripper_horizontal_body.stl  pneumatic_gripper_horizontal_body_simplified.stl  pneumatic_gripper_horizontal_left_jaw.stl  pneumatic_gripper_horizontal_left_jaw_simplified.stl  pneumatic_gripper_horizontal_right_jaw.stl  pneumatic_gripper_horizontal_right_jaw_simplified.stl  pneumatic_gripper_vertical_body.stl  pneumatic_gripper_vertical_body_simplified.stl  pneumatic_gripper_vertical_left_jaw.stl  pneumatic_gripper_vertical_left_jaw_simplified.stl  pneumatic_gripper_vertical_right_jaw.stl  pneumatic_gripper_vertical_right_jaw_simplified.stl  ssg48_body.stl  (+11 more)
parol6/urdf_model/srdf/: PAROL6.srdf
parol6/urdf_model/urdf/: PAROL6.urdf
parol6/utils/: command_tracker.py  error_catalog.py  error_codes.py  errors.py  frames.py  ik.py  tracking.py  trajectory.py  warmup.py
scripts/: simplify_meshes.py
tests/: conftest.py  test_examples.py  test_jit_warmup.py
tests/hardware/: __init__.py  test_manual_moves.py
tests/integration/: __init__.py  conftest.py  test_ack_and_nonblocking.py  test_blend_lookahead.py  test_curved_commands_e2e.py  test_home_fastpath.py  test_jog_speed_extremes.py  test_movecart_accuracy.py  test_movecart_idempotence.py  test_multicast_reception.py  test_profile_commands.py  test_reset_semantics.py  test_shapes_e2e.py  test_smooth_commands_e2e.py  test_stale_error_wait.py  test_status_broadcast_autofailover.py  test_stop_semantics.py  test_streaming_cartesian_accuracy.py  test_tool_operations.py  test_udp_smoke.py  test_unhomed_motion_gate.py
tests/unit/: __init__.py  test_async_client_lifecycle.py  test_blend.py  test_collision_enablement.py  test_collision_integration.py  test_commands_base.py  test_controller_system_commands.py  test_conversions.py  test_dry_run_blend.py  test_dry_run_script_compat.py  test_gripper_ramp.py  test_messages.py  test_mock_transport.py  test_motion.py  test_motion_pipeline.py  test_movecart_command.py  test_pdeathsig.py  test_protocol_status_decode_enablement.py  test_query_commands_actions.py  test_reset_command.py  test_robot_api_commands.py  test_ruckig_bypass.py  test_server_manager.py  test_servol_clamp_resync.py  test_smooth_motion_api.py  test_status_cache_enablement_ascii.py  test_tcp_offset.py  test_trajectory.py  test_wire.py  test_wire_actions.py  test_wire_pack.py  test_wrist_flip_velocity_limit.py
tests/utils/: __init__.py  process.py  udp.py
